--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>Tic Tac Toe</title>
 </head>
 <body>
-  
+  <div id='container'>
+  <div id='heading'>Welcome to Clumsyknight's <strong>TicTacToe</strong></div>
+  <div id='game-board'>
+    <div id='cell-1' class='cells'></div>
+    <div id='cell-2' class='cells'></div>
+    <div id='cell-3' class='cells'></div>
+    <div id='cell-4' class='cells'></div>
+    <div id='cell-5' class='cells'></div>
+    <div id='cell-6' class='cells'></div>
+    <div id='cell-7' class='cells'></div>
+    <div id='cell-8' class='cells'></div>
+    <div id='cell-9' class='cells'></div>
+  </div>
+</div>
+
+  <script src="script.js"></script>
 </body>
 </html>
