added data-cell to get cellnumber on board

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
   <div id='container'>
     <div id='heading'>Welcome to Clumsyknight's <strong>TicTacToe</strong></div>
     <div id='game-board'>
-      <div id='cell-1' class='cells'></div>
-      <div id='cell-2' class='cells'></div>
-      <div id='cell-3' class='cells'></div>
-      <div id='cell-4' class='cells'></div>
-      <div id='cell-5' class='cells'></div>
-      <div id='cell-6' class='cells'></div>
-      <div id='cell-7' class='cells'></div>
-      <div id='cell-8' class='cells'></div>
-      <div id='cell-9' class='cells'></div>
+      <div id='cell-1' class='cells' data-cell='1'></div>
+      <div id='cell-2' class='cells' data-cell='2'></div>
+      <div id='cell-3' class='cells' data-cell='3'></div>
+      <div id='cell-4' class='cells' data-cell='4'></div>
+      <div id='cell-5' class='cells' data-cell='5'></div>
+      <div id='cell-6' class='cells' data-cell='6'></div>
+      <div id='cell-7' class='cells' data-cell='7'></div>
+      <div id='cell-8' class='cells' data-cell='8'></div>
+      <div id='cell-9' class='cells' data-cell='9'></div>
     </div>
   </div>
 
