--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
     <div id='heading'>Welcome to Clumsyknight's <strong>TicTacToe</strong></div>
     <div id='get-player'>
       <div id='pl-1'>
-        Enter Player 1 name: <input type="text" name="player-1" id="player-1" spellcheck="false"/>
+        Enter Player <strong>X</strong> name: <input type="text" name="player-1" id="player-1" spellcheck="false"/>
       </div>
       <div id='pl-2'>
-        Enter Player 2 name: <input type="text" name="player-2" id="player-2" spellcheck="false"/>
+        Enter Player <strong>O</strong> name: <input type="text" name="player-2" id="player-2" spellcheck="false"/>
       </div>
       <button id='start'> Start Game</button>
     </div>
+    <div id='now-playing'></div>
     <div id='game-board'>
       <div id='cell-1' class='cells' data-cell='1'></div>
       <div id='cell-2' class='cells' data-cell='2'></div>
