--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
       <div id='cell-8' class='cells' data-cell='8'></div>
       <div id='cell-9' class='cells' data-cell='9'></div>
     </div>
+    <div id='buttons'>
+      <button>Reset Game</button>
+    </div>
   </div>
 
   <script src="script.js"></script>
