improved gameBoard style

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div id='cell-9' class='cells' data-cell='9'></div>
     </div>
     <div id='buttons'>
-      <button>Reset Game</button>
+      <button id=reset>Reset Game</button>
     </div>
   </div>
 
