Added username validation

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div id='pl-2'>
         Enter Player <strong>O</strong> name: <input type="text" name="player-2" id="player-2" spellcheck="false"/>
       </div>
-      <button id='start'> Start Game</button>
+      <button id='start' title='Start Game'> Start Game</button>
     </div>
     <div id='now-playing'></div>
     <div id='game-board'>
@@ -31,7 +31,7 @@
       <div id='cell-9' class='cells' data-cell='9'></div>
     </div>
     <div id='buttons'>
-      <button id=reset>Reset Game</button>
+      <button id=reset title='Reset game'>Reset Game</button>
     </div>
   </div>
 
