Win function complete
Reset button finished

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div id='cell-9' class='cells' data-cell='9'></div>
     </div>
     <div id='buttons'>
-      <button id=reset title='Reset game'>Reset Game</button>
+      <button id=reset title='Reset board'>Reset Board</button>
     </div>
   </div>
 
